--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,8 @@
     "start-server-and-test": "^2.0.9",
     "typescript": "~5.6.3",
     "unocss": "^65.4.3",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
     "vitest": "^2.1.8",
